# Allegro-Hand-Controller-DIME

./: .gitmodules
src/allegro_hand/: CMakeLists.txt  package.xml
src/allegro_hand/include/: AllegroController.h
src/allegro_hand/launch/: allegro_hand.launch
src/allegro_hand/src/: AllegroController.cpp  AllegroControllerBindings.cpp
src/allegro_hand/src/allegro_hand/: controller.py
src/allegro_hand/timing_issue/: pub.py  sub.py
src/allegro_hand_controllers/src/: allegro_node.cpp  allegro_node_pd.cpp
src/allegro_hand_driver/src/: AllegroHandDrv.cpp
src/allegro_hand_parameters/: gains_pd.yaml  zero.yaml
